--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
+@font-face {
+  font-family: myCursive;
+  src: url(assets/fonts/PlumBAL.ttf);
+  font-weight: bold;
+}
