add administration feature

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -2,8 +2,9 @@
   <div class="nav-wrapper">
     <a href routerLink="" class="brand-logo"><img src="assets/images/homework.png" /></a>
     <ul id="nav-mobile" class="right hide-on-med-and-down">
-      <li><a href (click)="login($event)" *ngIf="!isAuth()">Connexion</a></li>
       <li class="static-info" *ngIf="isAuth()">{{getUser().displayName}} ({{getUser().email}})</li>
+      <li routerLinkActive="active"><a href routerLink="/admin" *ngIf="isAdmin()">Administration</a></li>
+      <li><a href (click)="login($event)" *ngIf="!isAuth()">Connexion</a></li>
       <li><a href (click)="logout($event)" *ngIf="isAuth()">Déconnexion</a></li>
     </ul>
   </div>
