--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -3,13 +3,13 @@
 <div *ngIf="!isAuth()">
   <h2>Merci de bien vouloir vous identifiez !</h2>
   <p>
-    <button class="btn" (click)="login()">Connexion</button>
+    <button class="btn blue darken-1" (click)="login()">Connexion</button>
   </p>
 </div>
 
 <div *ngIf="isAuth()">
   <p>Veuillez choisir votre activité parmis celles proposées ci-dessous.</p>
   <p>
-    <button class="btn" routerLink="/words">Les mots à écrire</button>
+    <button class="btn blue darken-1" routerLink="/words">Les mots à écrire</button>
   </p>
 </div>
