add user mgmt + firebase config

--- a/src/app/components/admin/root/admin.component.html
+++ b/src/app/components/admin/root/admin.component.html
@@ -4,6 +4,7 @@
     <ul id="nav-mobile" class="left">
       <li routerLinkActive="active"><a href routerLink="words">Gestion des mots</a></li>
       <li routerLinkActive="active"><a href routerLink="params">Paramètres</a></li>
+      <li routerLinkActive="active"><a href routerLink="users">Utilisateurs</a></li>
     </ul>
   </div>
 </nav>
