--- a/src/app/components/words/words.component.html
+++ b/src/app/components/words/words.component.html
@@ -7,7 +7,7 @@
 
 <div *ngIf="sessionStarted">
   <button (click)="readWord(textField)" class="btn blue"><i class="material-icons left">play_arrow</i>Réécouter</button>
-  <button (click)="readExplanation()" class="btn blue" *ngIf="randomWord?.explain">Description</button>
+  <button (click)="readExplanation()" class="btn ornage darken-1 white-text" *ngIf="randomWord?.explain"><i class="material-icons left">warning</i>Description</button>
 
   <span class="right status z-depth-5 orange darken-3 white-text"><span>{{ validResponsesCount() }}</span> / {{ getMaxWordsInSession() }}</span>
 
@@ -17,7 +17,7 @@
         <input id="input-label" type="text" name="word" [(ngModel)]="inputLabel" autofocus required autocomplete="off" #textField />
       </div>
       <div class="col s12 m6 l4">
-        <button type="submit" name="submit" class="btn btn-large btn-submit orange darken-3 white-text" [class.disabled]="!wordsForm.valid">
+        <button type="submit" name="submit" class="btn btn-large btn-submit orange darken-3 white-text" [disabled]="!wordsForm.valid">
           <i class="material-icons left">done</i>
           Valider
         </button>
