add audio and progress bar

--- a/src/app/components/words/words.component.css
+++ b/src/app/components/words/words.component.css
@@ -11,6 +11,11 @@
   font-size: 1.5em;
 }
 
+.progress {
+  height: 7px;
+  margin-top: 35px;
+}
+
 /******************/
 /**** TEXTFIELD ***/
 /******************/
