add myday module

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -5,6 +5,7 @@
     <p>Veuillez choisir votre activité parmis celles proposées ci-dessous.</p>
     <p>
       <button class="btn blue darken-1" routerLink="/words">Les mots à écrire</button>
+      <button class="btn blue darken-1" routerLink="/myday">Ma journée</button>
     </p>
   </div>
 
