--- a/src/app/components/myday/myday.component.html
+++ b/src/app/components/myday/myday.component.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col s6">
-    <form [formGroup]="form" *ngIf="total">
+    <form [formGroup]="form">
       <p>
         <label for="daybook">
           <input type="checkbox" id="daybook" formControlName="daybook" />
